# cantoral

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: build.yml
design/: Cantoral.dc.html
src/: App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  scanner.rs
src/components/: AddFolderDialog.tsx  CollectionsView.tsx  ConfigView.tsx  DemoPill.tsx  DesignSystemView.tsx  DetailPanel.tsx  Empty.tsx  HelpDialog.tsx  LibraryView.tsx  NewListDialog.tsx  PlayerBar.tsx  PlaylistView.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx  TopBar.tsx
src/lib/: api.ts  covers.ts  seed.ts  styles.ts  types.ts
src/styles/: global.css
